1-entradaSalida first commit

--- a/1-EntradaSalida/EntradaSalida-07.html
+++ b/1-EntradaSalida/EntradaSalida-07.html
@@ -45,13 +45,13 @@
 				
 		
 			
-			<a  class="MiBotonUTNnav"  onclick="sumar()" >Sumar ( + )</a>
-			<a  class="MiBotonUTNnav"  onclick="restar()" >Restar ( - )</a>
+			<a  class="MiBotonUTNnav"  onclick="sumar(txtIdNumeroUno, txtIdNumeroDos)" >Sumar ( + )</a>
+			<a  class="MiBotonUTNnav"  onclick="restar(txtIdNumeroUno, txtIdNumeroDos)" >Restar ( - )</a>
 			<br><br><br>
 			
-			<a  class="MiBotonUTNnav"  onclick="multiplicar()" >Multiplicar ( * )
+			<a  class="MiBotonUTNnav"  onclick="multiplicar(txtIdNumeroUno, txtIdNumeroDos)" >Multiplicar ( * )
 			</a>&nbsp&nbsp
-			<a  class="MiBotonUTNnav"  onclick="dividir()" >Dividir ( / )</a>
+			<a  class="MiBotonUTNnav"  onclick="dividir(txtIdNumeroUno, txtIdNumeroDos)" >Dividir ( / )</a>
 	</form>				
    
   </div>
