--- a/1-EntradaSalida/EntradaSalida-02.html
+++ b/1-EntradaSalida/EntradaSalida-02.html
@@ -37,7 +37,7 @@
   <div class="col-6 col-s-9">
    	<form class=" animated bounceInLeft FormIngreso">
 	   	<h1>Tomar y mostrar mensaje</h1>
-	   	<a  class="MiBotonUTNnav" onclick="mostrar()" >Mostrar</a>
+	   	<a  class="MiBotonUTNnav" onclick="mostrar('diego')" >Mostrar</a>
 	 </form>	
   </div>
 
