--- a/1-EntradaSalida/EntradaSalida-05.html
+++ b/1-EntradaSalida/EntradaSalida-05.html
@@ -40,11 +40,11 @@
    	
 		<form class=" animated bounceInLeft FormIngreso">
 		<h1>Ingrese Su Nombre</h1>
-			<input type="text"  placeholder="Su nombre" id="txtIdNombre">
+			<input type="text"  placeholder="Su nombre" id="personName">
 
-				<input type="text"  placeholder="Su edad" id="txtIdEdad">
+				<input type="text"  placeholder="Su edad" id="personAge">
 				
-			<a  class="MiBotonUTNnav" onclick="mostrar()" >Mostrar</a>
+			<a  class="MiBotonUTNnav" onclick="mostrar(personName, personAge)" >Mostrar</a>
 			
 
 	</form>				
