--- a/1-EntradaSalida/EntradaSalida-06.html
+++ b/1-EntradaSalida/EntradaSalida-06.html
@@ -44,7 +44,7 @@
 
 				<input type="text"  placeholder="Ingrese número Dos" id="txtIdNumeroDos">
 				
-			<a  class="MiBotonUTNnav" onclick="sumar()" >Sumar</a>
+			<a  class="MiBotonUTNnav" onclick="sumar(txtIdNumeroUno, txtIdNumeroDos)" >Sumar</a>
 			
 
 	</form>				
