add entradaSalida excersise

--- a/1-EntradaSalida/EntradaSalida-05.html
+++ b/1-EntradaSalida/EntradaSalida-05.html
@@ -44,7 +44,7 @@
 
 				<input type="text"  placeholder="Su edad" id="personAge">
 				
-			<a  class="MiBotonUTNnav" onclick="mostrar(personName, personAge)" >Mostrar</a>
+			<a  class="MiBotonUTNnav" onclick="mostrar()" >Mostrar</a>
 			
 
 	</form>				
